fix: Break long words in comments
Very long words would go beyond the window and generate an horizontal
scrollbar. Not cool.

--- a/src/assets/stylesheets/custom/messages.css
+++ b/src/assets/stylesheets/custom/messages.css
@@ -22,8 +22,13 @@
 }
 
 .message__content {
+    overflow: hidden;
+
     margin-left: 5rem;
     padding: var(--space-smaller);
+
+    text-overflow: ellipsis;
+    word-wrap: break-word;
 }
 
 @media (min-width: 800px) {
